--- a/index.html
+++ b/index.html
@@ -3,13 +3,26 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Skift Quiz Prototype</title>
-	<link rel="stylesheet" href="css/style.css">
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="js/skift-quiz.js"></script>
+	<link rel="stylesheet" href="css/trivia-style.css">
+  <link rel="stylesheet" href="css/personality-style.css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="js/trivia-quiz-example.js"></script>
+  <script src="js/personality-quiz-example.js"></script>
+  <script src="js/trivia-quiz.js"></script>
+  <script src="js/personality-quiz.js"></script>
+  <script src="js/ready.js"></script>
+
 </head>
 <body>
 
-<h2>Quiz:</h2>
+<div id="trivia-quiz">
+  <div id="explanation"></div>
+  <div id="frame" role="content"></div>
+</div>
+
+<!-- <div id="personality-quiz">
+  <div id="personality-frame"></div>  
+</div> -->
 	
 </body>
 </html>
