1st draft of personality quiz finished

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 </head>
 <body>
 
-<div id="trivia-quiz">
+<!-- <div id="trivia-quiz">
   <div id="explanation"></div>
   <div id="frame" role="content"></div>
-</div>
-
-<!-- <div id="personality-quiz">
-  <div id="personality-frame"></div>  
 </div> -->
+
+<div id="personality-quiz">
+  <div id="personality-frame"></div>  
+</div>
 	
 </body>
 </html>
