--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Skift Quiz Prototype</title>
-	<link rel="stylesheet" href="css/trivia-style.css">
-  <link rel="stylesheet" href="css/personality-style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="js/trivia-quiz-example.js"></script>
   <script src="js/personality-quiz-example.js"></script>
@@ -15,14 +14,14 @@
 </head>
 <body>
 
-<!-- <div id="trivia-quiz">
+<div id="trivia-quiz">
   <div id="explanation"></div>
   <div id="frame" role="content"></div>
-</div> -->
-
-<div id="personality-quiz">
-  <div id="personality-frame"></div>  
 </div>
+
+<!-- <div id="personality-quiz">
+  <div id="personality-frame"></div>
+</div> -->
 	
 </body>
 </html>
