--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </head>
 <body>
 
-<div id="trivia-quiz">
+<!-- <div id="trivia-quiz">
   <div id="explanation"></div>
   <div id="frame" role="content"></div>
-</div>
-
-<!-- <div id="personality-quiz">
-  <div id="personality-frame"></div>
 </div> -->
+
+<div id="personality-quiz">
+  <div id="personality-frame"></div>
+</div>
 	
 </body>
 </html>
