Edit markup, styling

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 	<title>Skift Quiz Prototype</title>
 	<link rel="stylesheet" href="css/style.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="js/trivia-quiz.js"></script>
-  <script src="js/personality-quiz.js"></script>
-  <script src="js/ready.js"></script>
+  <script src="js/skift-quiz.js"></script>
 
 </head>
 <body>
