Adjust markup, styling

--- a/markup.html
+++ b/markup.html
@@ -18,11 +18,11 @@
 		<img src="http://placekitten.com/500/200" alt="" class="question-image">
 
 		<ul class="choices-block">
-			<li><a href="#" class="choice"><span class="box checked">&#9745;</span>Lorem ipsum dolor sit amet.
+			<li><a href="#" class="choice selected" data-index="1"><span class="box">&#9745;</span>Lorem ipsum dolor sit amet.
 			<img src="http://placekitten.com/300/200" alt=""></a></li>
-			<li><a href="#" class="choice"><span class="box correct">&#9745;</span>Incidunt ipsa iusto temporibus dolorem.
+			<li><a href="#" class="choice"><span class="box">&#9744;</span>Incidunt ipsa iusto temporibus dolorem.
 			<img src="http://placekitten.com/300/200" alt=""></a></li>
-			<li><a href="#" class="choice"><span class="box incorrect">&#9746;</span>Nisi blanditiis quam dolores sequi.
+			<li><a href="#" class="choice"><span class="box">&#9744;</span>Nisi blanditiis quam dolores sequi.
 			<img src="http://placekitten.com/300/200" alt=""></a></li>
 			<li><a href="#" class="choice"><span class="box">&#9744;</span>Deleniti commodi odit aliquid excepturi.
 			<img src="http://placekitten.com/300/200" alt=""></a></li>
